Visibility fix for alert in save and get model.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -314,7 +314,7 @@ body a {
 	border-bottom:10px solid #009944;
 }
 .top {
-	border: 10px solid #C2E9F9;*/
+	border: 10px solid #C2E9F9;
 }
 #FormModal form input[type="text"], #FormModal form input[type="submit"], #alert{
 	display: block;
@@ -331,14 +331,19 @@ body a {
 	padding-top: 2%;
 	position: relative;
 }
+#FormModal form input[type="text"]{
+	background: #ffffff;
+	color: #555 !important;
+}
 
 #alert{
 	font-size: 1.5vw;
+	height: 1.5vw;
 	cursor: default;
-	padding-bottom: 2%
+	padding-bottom: 2%;
 }
 #alert:empty{
-	display: none;
+	visibility: hidden;
 }
 
 /* Colors for colormodal options */
